--- a/package.json
+++ b/package.json
@@ -40,24 +40,24 @@
     "test:mp-weixin": "cross-env UNI_PLATFORM=mp-weixin jest -i"
   },
   "dependencies": {
-    "@dcloudio/uni-app-plus": "^2.0.0-28820200820001",
-    "@dcloudio/uni-h5": "^2.0.0-28820200820001",
-    "@dcloudio/uni-helper-json": "^1.0.5",
-    "@dcloudio/uni-mp-360": "^2.0.0-28820200820001",
-    "@dcloudio/uni-mp-alipay": "^2.0.0-28820200820001",
-    "@dcloudio/uni-mp-baidu": "^2.0.0-28820200820001",
-    "@dcloudio/uni-mp-qq": "^2.0.0-28820200820001",
-    "@dcloudio/uni-mp-toutiao": "^2.0.0-28820200820001",
-    "@dcloudio/uni-mp-vue": "^2.0.0-28820200820001",
-    "@dcloudio/uni-mp-weixin": "^2.0.0-28820200820001",
-    "@dcloudio/uni-quickapp-native": "^2.0.0-28820200820001",
-    "@dcloudio/uni-quickapp-webview": "^2.0.0-28820200820001",
-    "@dcloudio/uni-stat": "^2.0.0-28820200820001",
+    "@dcloudio/uni-app-plus": "^2.0.0-28920200923001",
+    "@dcloudio/uni-h5": "^2.0.0-28920200923001",
+    "@dcloudio/uni-helper-json": "^1.0.6",
+    "@dcloudio/uni-mp-360": "^2.0.0-28920200923001",
+    "@dcloudio/uni-mp-alipay": "^2.0.0-28920200923001",
+    "@dcloudio/uni-mp-baidu": "^2.0.0-28920200923001",
+    "@dcloudio/uni-mp-qq": "^2.0.0-28920200923001",
+    "@dcloudio/uni-mp-toutiao": "^2.0.0-28920200923001",
+    "@dcloudio/uni-mp-vue": "^2.0.0-alpha-29020200925003",
+    "@dcloudio/uni-mp-weixin": "^2.0.0-28920200923001",
+    "@dcloudio/uni-quickapp-native": "^2.0.0-alpha-29020200925003",
+    "@dcloudio/uni-quickapp-webview": "^2.0.0-28920200923001",
+    "@dcloudio/uni-stat": "^2.0.0-28920200923001",
     "@dcloudio/uni-ui": "^1.2.5",
-    "@vue/shared": "^3.0.0-rc.4",
+    "@vue/shared": "^3.0.0",
     "core-js": "^3.6.5",
     "flyio": "^0.6.2",
-    "moment": "^2.27.0",
+    "moment": "^2.29.0",
     "node-sass": "^4.14.1",
     "regenerator-runtime": "^0.12.1",
     "sass-loader": "^9.0.3",
@@ -65,25 +65,25 @@
     "vuex": "^3.2.0"
   },
   "devDependencies": {
-    "@dcloudio/types": "*",
-    "@dcloudio/uni-automator": "^2.0.0-28820200820001",
-    "@dcloudio/uni-cli-shared": "^2.0.0-28820200820001",
-    "@dcloudio/uni-migration": "^2.0.0-28820200820001",
-    "@dcloudio/uni-template-compiler": "^2.0.0-28820200820001",
-    "@dcloudio/vue-cli-plugin-hbuilderx": "^2.0.0-28820200820001",
-    "@dcloudio/vue-cli-plugin-uni": "^2.0.0-28820200820001",
-    "@dcloudio/vue-cli-plugin-uni-optimize": "^2.0.0-28820200820001",
-    "@dcloudio/webpack-uni-mp-loader": "^2.0.0-28820200820001",
-    "@dcloudio/webpack-uni-pages-loader": "^2.0.0-28820200820001",
+    "@dcloudio/types": "^2.0.8",
+    "@dcloudio/uni-automator": "^2.0.0-28920200923001",
+    "@dcloudio/uni-cli-shared": "^2.0.0-28920200923001",
+    "@dcloudio/uni-migration": "^2.0.0-28920200923001",
+    "@dcloudio/uni-template-compiler": "^2.0.0-28920200923001",
+    "@dcloudio/vue-cli-plugin-hbuilderx": "^2.0.0-28920200923001",
+    "@dcloudio/vue-cli-plugin-uni": "^2.0.0-28920200923001",
+    "@dcloudio/vue-cli-plugin-uni-optimize": "^2.0.0-28920200923001",
+    "@dcloudio/webpack-uni-mp-loader": "^2.0.0-28920200923001",
+    "@dcloudio/webpack-uni-pages-loader": "^2.0.0-28920200923001",
     "@types/html5plus": "^1.0.1",
     "@types/uni-app": "^1.4.3",
-    "@vue/cli-plugin-babel": "~4.5.0",
-    "@vue/cli-service": "~4.5.0",
+    "@vue/cli-plugin-babel": "^4.5.6",
+    "@vue/cli-service": "^4.5.6",
     "babel-plugin-import": "^1.11.0",
     "cross-env": "^7.0.2",
     "jest": "^25.4.0",
     "mini-types": "*",
-    "miniprogram-api-typings": "*",
+    "miniprogram-api-typings": "^3.1.1",
     "postcss-comment": "^2.0.0",
     "vue-template-compiler": "^2.6.11"
   },
